# datainpane

public-docs/: .gitignore  README.md  Taskfile.yml  mkdocs.yml  nbbuild.sh  pyproject.toml
public-docs/docs/: index.md  installing-datainpane.md
public-docs/docs/blocks/: convenience-blocks.md
public-docs/docs/reference/: reports.md
public-docs/docs/reports/: features.md
public-docs/docs/static/: extra.css
python-client/: pyproject.toml
python-client/src/datainpane/: __init__.py
python-client/src/datainpane/cli/: main.py  runner.py  server.py
python-client/src/datainpane/processors/: __init__.py  api.py  types.py
python-client/tests/: test_cdn.py  test_optional_libs.py  test_save_report.py
python-client/tests/client/views/: test_blocks.py  test_plots.py
web-components/: .gitignore  package-lock.json  package.json
web-components/cypress/support/: commands.js
web-components/report/src/components/: ReportContainer.vue
web-components/report/src/components/blocks/: Embed.vue  Table.ce.vue  Text.vue
web-components/report/tests/: setup.ts
