[project]
name = "datainpane-docs-beta"
version = "0.1.0"
description = "Data In Pane Docs"
authors = [{ name = "Data In Pane", email = "info@datainpane.com" }]
requires-python = ">=3.12"
dependencies = [
    "datainpane[plotting] @ file:///${PROJECT_ROOT}/../python-client",

    # mkdocs
    "mkdocs-redirects>=1.2.0,<2.0.0",
    "mkdocstrings[python]>=0.23.0,<1.0.0",
    "mkdocs-material>=9.2.0,<10.0.0",
    "mknotebooks>=0.8.0,<1.0.0",

    # DS helpers
    "jupyterlab>=3.4.3,<4.0.0",
    "seaborn>=0.11.2,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
